@@ -143,10 +143,12 @@ importFrom("stats", "na.pass")
 importFrom("stats", "density")
 importFrom("stats", "cor")
 importFrom("stats", "qt")
+importFrom("stats", "dpois", "poisson.test")
 importFrom("utils", "install.packages")
 importFrom("utils", "hasName")
 importFrom("grDevices", "colorRampPalette")
 importFrom("grDevices", "heat.colors")
+importFrom("grDevices", "rainbow")
 importFrom("grDevices", "terrain.colors")
 importFrom("graphics", "axis", "grconvertX", "grconvertY", "hist", "rect")
 importFrom("graphics", "text")
